// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should match snapshot - Any valid Icon with huge size: Icon snapshot - valid icon with huge size 1`] = `
<i
  className="sc-bdVaJa dJsSCD natds-icons natds-icons-outlined-alert-cancel"
  size="huge"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with hugex size: Icon snapshot - valid icon with hugex size 1`] = `
<i
  className="sc-bdVaJa jyACMJ natds-icons natds-icons-outlined-alert-cancel"
  size="hugex"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with hugexx size: Icon snapshot - valid icon with hugexx size 1`] = `
<i
  className="sc-bdVaJa dGTqKp natds-icons natds-icons-outlined-alert-cancel"
  size="hugexx"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with hugexxx size: Icon snapshot - valid icon with hugexxx size 1`] = `
<i
  className="sc-bdVaJa eoKYvL natds-icons natds-icons-outlined-alert-cancel"
  size="hugexxx"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with large size: Icon snapshot - valid icon with large size 1`] = `
<i
  className="sc-bdVaJa jKoFUU natds-icons natds-icons-outlined-alert-cancel"
  size="large"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with larger size: Icon snapshot - valid icon with larger size 1`] = `
<i
  className="sc-bdVaJa dGRaGr natds-icons natds-icons-outlined-alert-cancel"
  size="larger"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with largest size: Icon snapshot - valid icon with largest size 1`] = `
<i
  className="sc-bdVaJa gBaqWx natds-icons natds-icons-outlined-alert-cancel"
  size="largest"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with medium size: Icon snapshot - valid icon with medium size 1`] = `
<i
  className="sc-bdVaJa ioRmCd natds-icons natds-icons-outlined-alert-cancel"
  size="medium"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with micro size: Icon snapshot - valid icon with micro size 1`] = `
<i
  className="sc-bdVaJa hQJWqK natds-icons natds-icons-outlined-alert-cancel"
  size="micro"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with small size: Icon snapshot - valid icon with small size 1`] = `
<i
  className="sc-bdVaJa eMHvyV natds-icons natds-icons-outlined-alert-cancel"
  size="small"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with standard size: Icon snapshot - valid icon with standard size 1`] = `
<i
  className="sc-bdVaJa jWbhAs natds-icons natds-icons-outlined-alert-cancel"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with standard size: Icon snapshot - valid icon with standard size 2`] = `
<i
  className="sc-bdVaJa dSgozt natds-icons natds-icons-outlined-alert-cancel"
  size="standard"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon with tiny size: Icon snapshot - valid icon with tiny size 1`] = `
<i
  className="sc-bdVaJa hQJWqK natds-icons natds-icons-outlined-alert-cancel"
  size="tiny"
/>
`;

exports[`Icon component should match snapshot - Any valid Icon without theme: Icon snapshot - valid Icon without theme 1`] = `
<i
  className="sc-bdVaJa jWbhAs natds-icons natds-icons-outlined-alert-cancel"
/>
`;
